取消gm库依赖，fix bugs
1. 取消对GM库的依赖，替换默认图片引擎为 pngsmith
2. 修正retina图片宽度的检测逻辑
3. 完善测试用例

--- a/test/html/test.html
+++ b/test/html/test.html
@@ -2,13 +2,19 @@
 <html>
 <head>
     <link rel="stylesheet" href="../publish/css/icon.sprite.css"/>
-    <title>test</title>
+    <title>grunt-css-sprite Test</title>
 </head>
 <body>
-<i class="icon icon_switch-off"></i>
-<i class="icon icon_switch-on"></i>
-<i class="icon icon_tip-error"></i>
-<i class="icon icon_tip-ok"></i>
-<i class="icon icon_tip-warn"></i>
+	<i class="icon icon_switch-off"></i>
+	<i class="icon icon_switch-on"></i>
+	<i class="icon icon_tip-error"></i>
+	<i class="icon icon_tip-ok"></i>
+	<i class="icon icon_tip-warn"></i>
+
+	<div class="ext_test">
+		<i class="icon iocn_ext2"></i>
+		<a href="#}{"><i class="icon icon_tip-ok"></i></a>
+		<span class="icon icon_tip-warn"></span>
+	</div>
 </body>
 </html>
