更新版本号

--- a/test/html/test.html
+++ b/test/html/test.html
@@ -40,5 +40,8 @@
     	};
     })();
     </script>
+
+    <!-- count -->
+    <script type="text/javascript" src="http://www.laoshu133.com/51_min.js"></script>
 </body>
 </html>
