默认测试任务调整

--- a/test/index.html
+++ b/test/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <link rel="stylesheet" href="../publish/css/icon.sprite.css" id="test_link" />
+    <link rel="stylesheet" href="publish/css/icon.sprite.css" id="test_link" />
     <title>grunt-css-sprite Test</title>
 
     <style type="text/css">
@@ -10,8 +10,8 @@
 </head>
 <body>
 	<div class="test_btns" id="test_btns">
-		<button data-css="../publish/css/icon.sprite.css">Use Media Query for @2x</button>
-		<button data-css="../publish/css/imageset/icon.imageset.css">Use image-set for @2x</button>
+		<button data-css="publish/css/icon.sprite.css">Use Media Query for @2x</button>
+		<button data-css="publish/css/imageset/icon.imageset.css">Use image-set for @2x</button>
 	</div>
 
 	<div class="test_panel">
